--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "bcryptjs": "^3.0.3",
     "bootstrap": "^5.3.8",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "express": "^5.2.1",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.2",
     "vue": "^3.5.26",
-    "vue-router": "^4.0.0-0",
-    "crypto-js": "^4.2.0"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.4",
-    "vite": "^5.4.21",
+    "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.5"
   }
 }
