--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "express": "^5.2.1",
+    "form-data": "^4.0.5",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.2",
+    "multer": "^2.0.2",
     "vue": "^3.5.26",
     "vue-router": "^4.0.0-0"
   },
